--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,25 @@
   align-items: center;
   border: 1px solid black;
 }
-li {
+.list li {
   border: 1px solid black;
   list-style-type: none;
+}
+nav li {
+  list-style-type: none;
+}
+nav ul {
+  display: flex;
+}
+nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+body {
+  background-color: #424242;
+}
+a {
+  color: white;
 }
