--- a/src/crypto.css
+++ b/src/crypto.css
@@ -5,6 +5,12 @@ body {
   flex-direction: column;
   align-items: center;
 }
+tr.negative {
+  background-color: rgba(255, 0, 0, 0.178);
+}
+tr.positive {
+  background-color: rgba(0, 128, 0, 0.151);
+}
 a {
   color: white;
 }
