--- a/src/crypto.css
+++ b/src/crypto.css
@@ -25,8 +25,8 @@ td {
   padding: 15px;
   text-align: left;
 }
-.negative {
-  background-color: red;
+th {
+  background-color: #1b2530;
 }
 .positive {
   background-color: green;
