--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+body {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .header {
   background-color: #424242;
   color: white;
