--- a/src/index.css
+++ b/src/index.css
@@ -22,18 +22,19 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  background-color: #424242;
+  background-color: transparent;
   color: white;
-  border: 1px solid black;
   padding: 10px;
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   position: absolute;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
+  top: 100px;
   text-align: center;
+  background-color: #34495e;
 }
 .hide {
   display: none;
