--- a/src/index.css
+++ b/src/index.css
@@ -42,10 +42,11 @@ body {
 
 .list {
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
   gap: 15px;
   align-items: center;
-  border: 1px solid black;
+  background-color: #34495e;
 }
 .list li {
   border: 1px solid black;
