--- a/src/index.css
+++ b/src/index.css
@@ -84,3 +84,18 @@ form {
   flex-direction: column;
   width: 300px;
 }
+input {
+  background-color: transparent;
+  outline: none;
+  border: 1px solid #3498db;
+  height: 30px;
+  color: white;
+  margin-bottom: 15px;
+  border-radius: 5px;
+}
+input::placeholder {
+  color: rgb(189, 187, 187);
+}
+input:focus {
+  border: 1.5px solid #3498db;
+}
