Add button styling

--- a/src/index.css
+++ b/src/index.css
@@ -102,3 +102,22 @@ input:focus {
 form {
   padding-right: 25px;
 }
+button {
+  background-color: #3498db;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.items button {
+  margin-left: 10px;
+}
+.edit-popup button {
+  margin-left: 0px;
+}
