--- a/src/crypto.css
+++ b/src/crypto.css
@@ -41,3 +41,8 @@ li {
   font-size: larger;
   font-weight: bold;
 }
+.exchange {
+  color: #3498db;
+  font-weight: bold;
+  padding-bottom: 5px;
+}
